PHPOE-1604 - Fixed search bar alignment when advanced search button is removed

--- a/plugins/OpenEmis/webroot/css/layout.css
+++ b/plugins/OpenEmis/webroot/css/layout.css
@@ -989,6 +989,10 @@ input[type="checkbox"] {
 	        border-radius: 3px;
 }
 
+.input-group-btn {
+	display: block;
+}
+
 .btn-default,
 .selected,
 .selected:active,
